Исправил уровень логирования.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
           until redis-cli -h localhost -p 6379 ping; do
             echo "Waiting for Redis..."
             sleep 2 
+          done
 
       - name: Wait for PostgreSQL to be ready
         run: |
