--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,7 @@ services:
       POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
+  redis:
+    image: redis:latest      # Используется официальный образ Redis
+    ports:
+      - "6379:6379"          # Открытие порта 6379 для связи с Redis
